--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+      <% if user_signed_in? %>
+    👋 Welcome, <%= current_user.email %> |
+    <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= link_to 'Sign In', new_user_session_path %> |
+    <%= link_to 'Sign Up', new_user_registration_path %>
+  <% end %>
   </head>
 
   <body>
